# visual-attention-heatmap

./: AGENTS.md  DESIGN.md  README.md  pyproject.toml
core/features/: __init__.py  center_bias.py  center_surround.py  contrast.py  edge_density.py  feature_base.py
core/fusion/: __init__.py  weighted_sum.py
tests/: test_center_surround.py  test_feature_invariants.py  test_fusion.py
